css/style.css
/*********************** Misc Global ***********************/

h1 {font-size: 20pt;}
.center {text-align: center;}

/* Had problems with clicking and dragging */
.button, table, table *
{
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.button
{
	display:inline-block;
	font-size: 10pt;
	background-color: rgb(55,55,55);
	color:white;
	border-radius: 3px;
	text-align: center;
	width:100%;
	height:28px;
	line-height: 28px;
}

.button:hover
{
	background-color: rgb(70,70,70);
	cursor:pointer;
}

.button:active
{
	background-color:rgb(50,120,50);
}

.button.left, .button.right
{
	height:18px;
	line-height: 18px;
	width:5em;
}

.true { background-color: rgb(50,120,50); }
.true:hover { background-color: rgb(80,160,80) !important; }

.hidden {display:none;}

.left {float:left;}
.right {float:right;}


/*********************** General ***********************/


body
{
	font-family: Arial, sans-serif;


	/*BACKGROUND GRADIENT (generated by: http://www.colorzilla.com/gradient-editor/)*/
	background: #000000; /* Old browsers */
	background: -moz-radial-gradient(center, ellipse cover,  #222222 0%, #000000 100%); /* FF3.6+ */
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#222222), color-stop(100%,#000000)); /* Chrome,Safari4+ */
	background: -webkit-radial-gradient(center, ellipse cover,  #222222 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
	background: -o-radial-gradient(center, ellipse cover,  #222222 0%,#000000 100%); /* Opera 12+ */
	background: -ms-radial-gradient(center, ellipse cover,  #222222 0%,#000000 100%); /* IE10+ */

	background-repeat:no-repeat;
	background-attachment:fixed;

	color:white;
}

header, footer
{
	text-align: center;
}

header
{
	padding-top:20px;
	padding-bottom:20px;
}

footer
{
	color: rgba(255,255,255, 0.15);
	padding-top:20px;
	font-size: 10pt;
}

footer .button
{
	display:block;
	margin-left:auto;
	margin-right:auto;
	margin-bottom:20px;
	width:300px;
}


/*********************** Sections ***********************/

section
{
	padding-top:8px;
	padding-bottom:8px;
	margin-bottom:20px;
	background-color: rgba(45,45,45,0.5);
	border-top:1px solid rgb(50,50,50);
	border-bottom:1px solid rgb(50,50,50);
}

section:last-of-type
{
	margin-bottom:0px;
}

section > *
{
	margin-left:50px;
	display:inline-block;
	vertical-align: top;
}

.options
{
	width:11em;
}

.options > div
{
	margin-bottom:8px;
	overflow:hidden;
}

.options > div:last-of-type { margin-bottom:0px; }


.options span
{
	font-size: 11pt;
	opacity: 0.5;
}

.options select
{
	width:8em;
	color:white;
	background-color: rgb(60,60,60);
	border:none;
	opacity: 0.5;
}

.options select:hover
{
	opacity: 1;
}

.options input
{
	width:9em;
	display:inline-block;
	margin:0px;
	padding:0px;
}

table
{
	display:inline-block;
}

table td
{
	padding:1px;
}

table td > div
{
	height:9px;
	width:30px;
	border-radius: 2px;
}

/*********************** Main ***********************/


#main table
{
	padding-left:1em;
	padding-right:1em;
}

#main td > div { background-color: rgb(70,30,30); height:18px;}
#main td > div.true { background-color: rgb(200,30,30); }


/*********************** Tracks ***********************/


.table > *
{
	vertical-align: top;
}

.shiftLeft, .shiftRight
{
	width:1em;
	height:132px;
	line-height: 132px;
}

.track td > div.false:hover { background-color: rgb(60,80,60) !important; }
.track td > div.true:hover { background-color: rgb(90,170,90) !important; }
.track td > div.true { background-color: rgb(50,140,50); }
.track td > div.false { background-color: rgb(40,60,40); }
.track td > div.play { background-color: rgb(60,255,60); }

